# pyimgroutines

./: README.md  SKILL.md  SKILLS.md  pyproject.toml
examples/: dynamic_image_mask_to_histogram.py
src/pyimgroutines/: cli.py  conv.py  interp.py  io.py  plots.py  remap.py  timer.py
src/pyimgroutines/customitems/: ellipses.py
src/pyimgroutines/plots/: _binarycolormap.py  _keybuffer.py  animation.py  core.py
src/pyimgroutines/plots/customitems/: __init__.py  ellipses.py  histograms.py  polygons.py
src/pyimgroutines/plots/mplext/: helpers.py
