[project]
name = "pyimgroutines"
version = "0.1.1"
description = ""
authors = [
    {name = "icyveins7",email = "icyveins@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyqtgraph >= 0.14.0",
    "matplotlib >= 3.10.8",
    "pyside6 >= 6.10.2",
    "numpy >= 2.2.6",
    "scipy >= 1.15.3"
]


[project.scripts]
PlotImageFile = "pyimgroutines.cli:PlotImageFile"
CompareImageFiles = "pyimgroutines.cli:CompareImageFiles"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
